# libsysrepo

./: .gitignore  CMakeLists.txt
demo/proc/net/: .gitignore
demo/proc/net/tools/: .gitignore  Makefile  if.c  if.h  if.yang  ifstat@2015-03-11.yang  ifstatus.c
examples/cli/: .gitignore  Makefile  README  cli.c  fileman.c  sshd_config.xsl
examples/cli/debian/: changelog  control
examples/sshd_config/: .gitignore  Makefile  README  sshd_config.sh  sshd_config.xsl  sshd_config.yang
include/sysrepo/: demo.h  sysrepo.h
src/: internal.h  libsysrepo.c
src/test/: tcp.c  tcp.h  ubus.c  ubus.h  umaapi.c
